--- a/deployments/Dockerfile
+++ b/deployments/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8-jdk-alpine
 VOLUME /tmp
-ARG JAR_FILE
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+ADD movie-catalog-service-0.0.1-SNAPSHOT.jar movie-catalog-service.jar
+RUN sh -c 'touch /movie-catalog-service.jar'
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/movie-catalog-service.jar"]
